# ducia-listing-framework

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  api-reference.html  architecture.html  authentication.html  changelog.html  check.sh  ci-cd.html  configuration.html  crates.js  deploy.sh  deployment.html  development.html  docker-compose.yml  fetch-docs.sh  frontend.html  getting-started.html  help.html  i18n.html  index.html  nohup.out  package-lock.json  package.json  permissions.html  plugins.html  print.html  push.sh  searchindex.js  searchindex.json  settings.html  src-files.js  storage.html  sync-docs.sh  tsconfig.json  (+3 more)
.gh-pages/: crates.js  help.html  settings.html  src-files.js
.gh-pages/ducia/: all.html  fn.run_server.html  index.html  struct.AppState.html
.gh-pages/search.index/: 00de60e79753.js  07254459212c.js  2f3ede7c410b.js  46f17cd00e9e.js  560938655d65.js  6e8c471377ee.js  root.js
.github/: PULL_REQUEST_TEMPLATE.md  TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-to-server.yml  pages.yml  publish-crate.yml  publish-docs.yml  publish.yml
backend/: Cargo.toml  README.md
backend/config/: docs.json
backend/docs/: 1.md
backend/ducia-core/: Cargo.toml  README.md
backend/ducia-core/src/: lib.rs
backend/ducia-core/src/doc/: model.rs  repo.rs
backend/ducia-core/src/i18n/: mod.rs
backend/ducia-core/src/perm/: model.rs
backend/ducia-core/src/plugin/: auth.rs  mod.rs  registry.rs  storage.rs
backend/plugins/auth-db/: Cargo.toml  README.md
backend/plugins/auth-db/src/: lib.rs
backend/plugins/auth-simple/: Cargo.toml  README.md
backend/plugins/auth-simple/src/: lib.rs
backend/plugins/storage-fs/: Cargo.toml  README.md
backend/plugins/storage-fs/src/: lib.rs
backend/plugins/storage-sqlite/: Cargo.toml  README.md
backend/plugins/storage-sqlite/src/: lib.rs
backend/server/: Cargo.toml
backend/server/src/: lib.rs  main.rs  state.rs
backend/server/src/handlers/: admin.rs  auth_handler.rs  delete.rs  deprecated.rs  get.rs  i18n.rs  list.rs  lock.rs  mod.rs  upload.rs
backend/server/tests/: doc_lifecycle.rs
backend/src/: App.jsx  config.rs  db.rs  lib.rs  main.rs  models.rs
backend/src/handlers/: admin.rs  delete.rs  deprecated.rs  get.rs  list.rs  mod.rs  upload.rs
backend/wasm/: Cargo.toml
backend/wasm/src/: lib.rs
book/: book.toml  mermaid-init.js
book/book/: 404.html  api-reference.html  architecture.html  authentication.html  changelog.html  configuration.html  deployment.html  development.html  frontend.html  getting-started.html  i18n.html  index.html  permissions.html  plugins.html  print.html  searcher-c2a407aa.js  searchindex-003bed1d.js  searchindex-4568314d.js  searchindex-c9d4c122.js  storage.html  toc-9fa0b557.js  toc-df4d3453.js  toc.html  typescript.html  wasm.html
book/src/: SUMMARY.md  api-reference.md  architecture.md  authentication.md  changelog.md  ci-cd.md  configuration.md  deployment.md  development.md  frontend.md  getting-started.md  i18n.md  introduction.md  permissions.md  plugins.md  storage.md  typescript.md  wasm.md
config/: auth.json  docs.json  roles.json  sequence.json  settings.json  site.json
config/i18n/: en.json  zh-CN.json
data/: auth.db
docs/: 1.md  2.md  说明书.md
ducia/: all.html  fn.run_server.html  index.html  sidebar-items.js  struct.AppState.html
ducia/config/: fn.load_admin_sequence.html  fn.load_site_name.html  index.html  sidebar-items.js
ducia/db/: fn.get_doc_content.html  fn.load_docs_map.html  fn.now_ms.html  fn.save_doc_content.html  fn.save_docs_map.html  index.html
ducia/handlers/: index.html
ducia/models/: index.html  struct.CreateDocReq.html  struct.DeprecatedReq.html  struct.DocMeta.html  struct.DocsMap.html
ducia_listing_framework/: all.html  fn.run_server.html  index.html  struct.AppState.html
ducia_listing_framework/config/: fn.load_admin_sequence.html  fn.load_site_name.html  index.html
ducia_listing_framework/db/: fn.get_doc_content.html  fn.load_docs_map.html  fn.now_ms.html  fn.save_doc_content.html  fn.save_docs_map.html  index.html  sidebar-items.js
ducia_listing_framework/handlers/: index.html  sidebar-items.js
ducia_listing_framework/models/: index.html  sidebar-items.js  struct.CreateDocReq.html  struct.DeprecatedReq.html  struct.DocMeta.html  struct.DocsMap.html
public/: ducia_wasm_bg.wasm
scripts/: deploy.conf.example  init_github_repo.sh  init_local.sh  run-dev.sh  setup_dev_env.sh  stop-dev.sh
scripts/git-hooks/: install.sh  pre-push
search.index/: 00507285ba55.js  0db17cf467bb.js  0e9c2737ef73.js  0f32e0ba9057.js  14a4d18de5df.js  274b0e7dea8d.js  3655b66fbd41.js  543a9d38b959.js  688d9b89e92c.js  6e695fe9fae3.js  root.js
search.index/crateNames/: 8b829d8ea799.js  b06a9ed5474d.js
search.index/desc/: 89877f28551a.js
search.index/entry/: 71f1a0cf215f.js  edb6764fa283.js
search.index/function/: 33f157e05fb4.js  857f29b458dc.js
search.index/generic_inverted_index/: 5040247ff073.js  b4f03b73f62e.js
search.index/name/: 7434c823999f.js  7c316ac79444.js
search.index/normalizedName/: 3d47abe2e616.js  b4ec45d19cc0.js
search.index/path/: fa5687f455de.js
search.index/type/: 125babed9ec2.js  355935b95b78.js
src/: App.jsx  App.tsx  main.jsx  main.tsx
src/components/: DeprecatedBanner.jsx  DeprecatedBanner.module.css  DeprecatedBanner.tsx  DocFooter.jsx  DocFooter.module.css  DocFooter.tsx  DocHeader.jsx  DocHeader.tsx  DocItem.jsx  DocItem.module.css  DocItem.tsx  Header.jsx  Header.tsx  MenuBar.module.css
src/ducia/: config.rs.html  db.rs.html  lib.rs.html  models.rs.html
src/ducia_listing_framework/: config.rs.html  db.rs.html  lib.rs.html  models.rs.html
src/hooks/: useAdmin.js  useAdmin.ts  useCats.js  useCats.ts  useDoc.js  useDoc.ts  useI18n.tsx  useStickyHeader.js  useStickyHeader.ts  useUpload.js  useUpload.ts
src/pages/: AdminPage.jsx  AdminPage.module.css  AdminPage.tsx  DocPage.jsx  DocPage.module.css  DocPage.tsx  Listing.jsx  Listing.module.css  Listing.tsx
tests/: e2e-lock.sh
(+147 files in other folders)
