[package]
name = "ducia-listing-framework"
version = "0.1.1"
edition = "2024"
authors = ["corain"]
description = "A lightweight documentation server built with Actix-web."
license = "MIT"
readme = "README.md"
repository = "https://github.com/FleetingLore/ducia-listing-framework.git"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1"
once_cell = "1"
