[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/FleetingLore/ducia-listing-framework"

[workspace]
resolver = "3"
members = [
    "ducia-core",
    "server",
    "plugins/auth-simple",
    "plugins/auth-db",
    "plugins/storage-fs",
    "plugins/storage-sqlite",
]
