[package]
name = "ducia-core"
version = "0.2.0"
edition = "2024"
description = "Core types, traits and plugin system for the Ducia listing framework"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
