[package]
name = "ducia-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits and plugin system for the Ducia listing framework"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["docs", "cms", "plugin", "markdown"]
categories = ["web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
