[package]
name = "ducia-server"
version = "0.2.0"
edition = "2024"
description = "Ducia listing framework server binary"
license = "MIT"

[[bin]]
name = "ducia-server"
path = "src/main.rs"

[dependencies]
ducia-core = { path = "../ducia-core" }
ducia-auth-simple = { path = "../plugins/auth-simple" }
ducia-auth-db = { path = "../plugins/auth-db" }
ducia-storage-fs = { path = "../plugins/storage-fs" }
ducia-storage-sqlite = { path = "../plugins/storage-sqlite" }
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
