[package]
name = "ducia-auth-db"
version = "0.1.0"
edition = "2024"
description = "Database-backed auth plugin for ducia (JWT + bcrypt + SQLite)"
license = "MIT"

[dependencies]
ducia-core = { path = "../../ducia-core" }
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["sync", "rt"] }
bcrypt = "0.16"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
