[package]
name = "ducia-auth-db"
version.workspace = true
edition.workspace = true
description = "Database-backed auth plugin for ducia (JWT + bcrypt + SQLite)"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ducia", "auth", "jwt", "plugin"]
categories = ["authentication"]

[dependencies]
ducia-core = { version = "0.2.0", path = "../../ducia-core" }
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["sync", "rt"] }
bcrypt = "0.16"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
