[package]
name = "ducia-auth-simple"
version = "0.1.0"
edition = "2024"
description = "Simple sequence-code based auth plugin for ducia"
license = "MIT"

[dependencies]
ducia-core = { path = "../../ducia-core" }
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
