[package]
name = "ducia-auth-simple"
version = "0.2.0"
edition = "2024"
description = "Simple sequence-code based auth plugin for ducia"
license = "MIT"
repository = "https://github.com/FleetingLore/ducia-listing-framework"
readme = "README.md"
keywords = ["ducia", "auth", "plugin"]
categories = ["authentication"]

[dependencies]
ducia-core = { version = "0.2.0", path = "../../ducia-core" }
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
